# photobooth-software

./: .gitignore
electron/main/: ipc_client.ts
hw_controller/: config.py  demo_fsm.html  demo_server.py  demo_session.html  demo_session.py  main.py  prototype.db  pyproject.toml  requirements.txt
hw_controller/core/: session.py  state_machine.py  sync_worker.py
hw_controller/db/: database.py  models.py
hw_controller/hardware/: camera.py  preview.py  printer.py
hw_controller/ipc/: protocol.py  server.py
hw_controller/tests/: conftest.py  test_database.py  test_state_machine.py
prd/: Photobooth - Epics.md  Photobooth - SSOT.csv  general.md  prd.md
